# rust-axum-hello-world-plus

./: .env.sample  .gitignore  Cargo.toml  curl.txt  data.examples.txt
.devcontainer/: devcontainer.json
src/: database.rs  main.rs  route_items.rs  route_lists.rs  types.rs
